Continued working on subsections

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ github_username:  Eliza-Danila
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jameswgrant
-linkedin_username: eliza-danila
+linkedin_username: eliza-danila-8bb984246
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: globalmtb
@@ -72,7 +72,7 @@ content:
         description: | # this will include new lines to allow paragraphs
           This project was completed for a Python summer course at MTSU. This game was completed within four weeks alongisde two other students and it utilizes the Python libraries <mark> Pygame <mark> and <mark> Pygame Widgets <mark>.
     
-    layout: list # Type of content section (list/text)
+    # layout: list # Type of content section (list/text)
     content:
         title: Undergraduate Honors Thesis
         # link_text: Project Website
@@ -108,7 +108,7 @@ content:
 
             - Connected with professionals in various leadership positions.
     
-    layout: list # Type of content section (list/text)
+    # layout: list # Type of content section (list/text)
     content:         
         title: HACK-MT
         # link: boringcompany.com
@@ -129,7 +129,7 @@ content:
 
             - Collaborated with 10+ students to complete the project efficiently
 
-    layout: list # Type of content section (list/text)
+    # layout: list # Type of content section (list/text)
     content:      
         title: Nashville Innovation Summit
         # link: boringcompany.com
@@ -147,7 +147,7 @@ content:
             
             - Collaborated with 25+ other volunteers to ensure attendees were supported during the event
 
-    layout: list # Type of content section (list/text)
+    # layout: list # Type of content section (list/text)
     content:      
         title: Girls Who Code
         # link: boringcompany.com
