--- a/_config.yml
+++ b/_config.yml
@@ -15,34 +15,9 @@ website: https://github.com/Eliza-Danila
 darkmode: false
 
 # Social links
-# twitter_username: facespics
 github_username:  Eliza-Danila
-# stackoverflow_username: "00000001"
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
-# instagram_username: jameswgrant
 linkedin_username: eliza-danila-8bb984246
-# xing_username: jekyll
-# pinterest_username: jekyll
-# youtube_username: globalmtb
-# googleplus_username: +jekyll
-# orcid_username: 0000-0000-0000-0000
 
-# Additional icon links
-# additional_links:
-# - title: itsgoingto.be
-#   icon: fas fa-globe
-#   url: https://www.itsgoingto.be
-# - title: another link
-#   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
-#   url: Link url (eg. https://google.com)
-
-# Google Analytics and Tag Manager
-# Using more than one of these may cause issues with reporting
-# gtm: "GTM-0000000"
-# gtag: "UA-00000000-0"
-# google_analytics: "UA-00000000-0"
 
 # About Section
 # about_title: About Me
@@ -59,32 +34,21 @@ content:
       - layout: top-middle
         title: Untitled Potato Project
         link: https://github.com/Midoriacti/Final_Project
-        # link_text: Project Website
+        link_text: Untitled Potato Game Github
         additional_links:
           - title:  sproogen/modern-resume-theme
             icon: fab fa-github
             url: github.com/sproogen/modern-resume-theme
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        # quote: >
-        #   This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
           This project was completed for a Python summer course at MTSU. This game was completed within four weeks alongisde two other students and it utilizes the Python libraries <mark> Pygame <mark> and <mark> Pygame Widgets <mark>.
     
-        layout: list # Type of content section (list/text)
+      - layout: list # Type of content section (list/text)
     # content:
         title: Undergraduate Honors Thesis
-        # link_text: Project Website
         additional_links:
           - title:  sproogen/modern-resume-theme
             icon: fab fa-github
             url: github.com/sproogen/modern-resume-theme
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        # quote: >
-        #   This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
         description: | # this will include new lines to allow paragraphs
           Currently researching how Artificial Intelligence can predict crime rates in Memphis, Tennessee. Thesis will be completed by December 2025 to aquire an Honors Minor at MTSU. 
 
@@ -93,78 +57,52 @@ content:
     content:
       - layout: left
         title: Institude of Leadership Excellence
-        # link: boringcompany.com
-        # link_text: boringcompany.com
         sub_title: Student
         caption: May 2025
-        # quote: >
-        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             - Attended a week long honors course that enriched students' leadership skills.
 
-
             - Collaborated with other students to complete various projects and strengthen our teamworking skills.
-
 
             - Connected with professionals in various leadership positions.
     
-        layout: list # Type of content section (list/text)
-    # content:         
+      - layout: list # Type of content section (list/text)
+        # content:         
         title: HACK-MT
-        # link: boringcompany.com
-        # link_text: boringcompany.com
         sub_title: Art and Asset Team Lead
         caption: January 2025
-        # quote: >
-        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             - Sourced and designed assets for a top-town military training simulator within 36 hours. 
-
-            
+         
             - Designed a presentation to showcase the model alongside other team leads of the project
 
-            
             - Primary lead of coding project received a scholarship award of $1000
-            
 
             - Collaborated with 10+ students to complete the project efficiently
 
-        layout: list # Type of content section (list/text)
-    # content:      
+      - layout: list # Type of content section (list/text)
+        # content:      
         title: Nashville Innovation Summit
-        # link: boringcompany.com
-        # link_text: boringcompany.com
         sub_title: Volunteer
         caption: September 2024
-        # quote: >
-        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
             - Interacted and registered 100+ attendees for a two-day event
 
-            
             - Networked with multiple technology companies and employers discussing internship opportunities and making connections
-
             
             - Collaborated with 25+ other volunteers to ensure attendees were supported during the event
 
-        layout: list # Type of content section (list/text)
-    # content:      
+      - layout: list # Type of content section (list/text)
+        # content:      
         title: Girls Who Code
-        # link: boringcompany.com
-        # link_text: boringcompany.com
         sub_title: Online Certifications
         caption: July 2022 - August 2022
-        # quote: >
-        #   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
         description: | # this will include new lines to allow paragraphs
-            Studied different technical languages such as Python, HTML, JavaScript, and CSS
-
+            - Studied different technical languages such as Python, HTML, JavaScript, and CSS
             
             - Created 10 small programs and 3 websites to gain programming knowledge and receive certifications
-
             
             - Attended weekly meetings to receive instructions about moving forward with projects or necessary changes
-
             
             - Collaborated with 10+ students to discuss project goals and details
 
@@ -176,29 +114,13 @@ content:
         title: Middle Tennessee State University
         caption: May 2026
         sub_title: Bachelor of Science in Computer Science
-        # quote: >
-        #   Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
         description: | # this will include new lines to allow paragraphs
           - Concentration in Professional Computer Science	
-
           
           - Minor in University Honors
-
           
           - Buchanan Transfer Fellowship Scholarship, 2 years
 
-
-  # - title: A Little More About Me
-  #   layout: text
-  #   content: | # this will include new lines to allow paragraphs
-  #     Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-  #     - Rock climbing
-  #     - Gaming
-  #     - Knitting
-  #     - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-
-  #     Look at this cool image  
-  #     ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
