--- a/_config.yml
+++ b/_config.yml
@@ -40,15 +40,11 @@ content:
             icon: fab fa-github
             url: https://github.com/Midoriacti/Final_Project
         description: | # this will include new lines to allow paragraphs
-          This project was completed for a Python summer course at MTSU. This game was completed within four weeks alongisde two other students and it utilizes the Python libraries <mark>Pygame</mark> and <mark>Pygame Widgets</mark>.
+          This project was completed for a Python summer course at MTSU. This game was completed within four weeks alongside two other students. It utilizes the Python libraries <mark>Pygame</mark> and <mark>Pygame Widgets</mark>.
     
       - layout: top-middle # Type of content section (list/text)
     # content:
         title: Undergraduate Honors Thesis
-        # additional_links:
-        #   - title:  sproogen/modern-resume-theme
-        #     # icon: fab fa-github
-        #     url: github.com/sproogen/modern-resume-theme
         description: | # this will include new lines to allow paragraphs
           Currently researching how Artificial Intelligence can predict crime rates in Memphis, Tennessee. Thesis will be completed by December 2025 to aquire an Honors Minor at MTSU. 
 
@@ -60,13 +56,13 @@ content:
         sub_title: Student
         caption: May 2025
         description: | # this will include new lines to allow paragraphs
-            - Attended a week long honors course that enriched students' leadership skills.
+            - Attended a week long honors course from 9:00 AM to 6:00 PM that enriched students' leadership skills.
 
             - Collaborated with other students to complete various projects and strengthen our teamworking skills.
 
             - Connected with professionals in various leadership positions.
     
-      - layout: list # Type of content section (list/text)
+      - layout: left # Type of content section (list/text)
         # content:         
         title: HACK-MT
         sub_title: Art and Asset Team Lead
@@ -80,7 +76,7 @@ content:
 
             - Collaborated with 10+ students to complete the project efficiently
 
-      - layout: list # Type of content section (list/text)
+      - layout: left # Type of content section (list/text)
         # content:      
         title: Nashville Innovation Summit
         sub_title: Volunteer
@@ -92,7 +88,7 @@ content:
             
             - Collaborated with 25+ other volunteers to ensure attendees were supported during the event
 
-      - layout: list # Type of content section (list/text)
+      - layout: left # Type of content section (list/text)
         # content:      
         title: Girls Who Code
         sub_title: Online Certifications
