--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle # Type of content section (list/text)
-        title: Data-Driven Crime Forecasting in Memphis: Leveraging AI for Predictive Analysis
+        title: "Data-Driven Crime Forecasting in Memphis: Leveraging AI for Predictive Analysis"
         description: | # this will include new lines to allow paragraphs
           Currently researching how artificial intelligence can predict crime rates in Memphis, Tennessee. This project utilizes Python and its libraries to make an AI prediction model. Thesis will be completed by December 2025 to acquire an undergraduate Honors Minor at MTSU. 
       
