--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ content:
         # content:      
         title: Nashville Innovation Summit
         sub_title: Volunteer
-        caption: September 2024 and August 2025
+        caption: September 2024, August 2025
         description: | # this will include new lines to allow paragraphs
             - Interacted and registered 100+ attendees for a two-day event
 
