updated education to include club experience

--- a/_config.yml
+++ b/_config.yml
@@ -126,6 +126,8 @@ content:
 
           - Institute of Leadership Excellence
 
+          - Secretary of Competitive Coding Club, 1 semester
+
 
 # Footer
 footer_show_references: true
