Updated experience section

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ content:
          
             - Designed a presentation to showcase the model alongside other team leads of the project
 
-            - Primary lead of coding project received a scholarship award of $1000
+            - Primary lead of coding project received a scholarship award
 
             - Collaborated with 10+ students to complete the project efficiently
 
